# New_Hackathon_2-Reusable-Intelligence

./: .gitignore  CLAUDE.md  README.md  RUNNING_BACKEND.md  db_test_results.txt  docker-compose.yml  file_test.py  pyproject.toml  simple_test.py  table_test_file.py  table_test_results.txt  test_all_components.py  test_backend_imports.py  test_backend_structure.py  test_console_interface.py  test_endpoint.py  test_final_validation.py  test_import_case_fixer.py  test_output.txt  test_postgres_connection.py  test_tables.py  test_task_simple.py  validate_implementation.py  vercel.json
.claude/: settings.local.json
.gemini/commands/: sp.fix-api-routing.toml
.qwen/agents/: import-case-agent.md
ai/: activation.md  identity.md  indentity.md  protocols.md  readme.md  review.md
ai/Prompts/: implmenter.md  planner.md  security-reviewer.md  spec-generator.md  tasks-breakdown.md
ai/fastapi_debugging/: debug_fastapi.py  python_314_compatibility.md  startup_issues.md
ai/skills/: ai_discipline.md  authentication_security.md  backend_engineering.md  cli_development.md  skills.md  (+26 more)
backend/: .env  .gitignore  create_db.py  create_test_user.py  main.py  requirements.txt  todo_app.db
frontend/: .gitignore  package-lock.json  package.json  vercel.json
specs/: architecture.md  overview.md  plan_phase_i.md  plan_phase_ii.md  tasks_phase_i.md  tasks_phase_ii.md
src/: __init__.py  main.py
test_import_case/: TaskList.tsx  TestComponent.tsx
tests/: test_backend_api.py  test_console_interface.py  test_integration.py  test_task.py  test_task_repository.py  test_task_service.py
(+59 files in other folders)
